Shell输入方式更改为虚拟化文本域